force-app/main/default/objects/dsfs__DocuSign_Envelope__c/dsfs__DocuSign_Envelope__c.object-meta.xml
<CustomObject>
    <description>DocuSign Envelope for Salesforce</description>
    <label>DocuSign Envelope</label>
    <nameField>
        <displayFormat>DSE-{0000000}</displayFormat>
        <label>DocuSign Envelope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>