force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__BulkSendError__c.field-meta.xml
<CustomField>
    <fullName>dsfs__BulkSendError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bulk Send Error</description>
    <inlineHelpText>Bulk Send Error</inlineHelpText>
    <label>Bulk Send Error</label>
    <type>Checkbox</type>
</CustomField>