force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterEnvCompleted__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterEnvCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelope Completed Chatter</label>
    <type>Checkbox</type>
</CustomField>