force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterEnvDeclined__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterEnvDeclined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelope Declined Chatter</label>
    <type>Checkbox</type>
</CustomField>