force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterEnvDelivered__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterEnvDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelope Delivered Chatter</label>
    <type>Checkbox</type>
</CustomField>