force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterEnvVoided__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterEnvVoided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelope Voided Chatter</label>
    <type>Checkbox</type>
</CustomField>