force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterRecipCompleted__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterRecipCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Completed Chatter</label>
    <type>Checkbox</type>
</CustomField>