force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterRecipDeclined__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterRecipDeclined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Declined Chatter</label>
    <type>Checkbox</type>
</CustomField>