force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterRecipDelivered__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterRecipDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Delivered Chatter</label>
    <type>Checkbox</type>
</CustomField>