force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocuSign_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Email_Message__c</fullName>
    <defaultValue>&quot;SENT TO YOU BY: &quot; &amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName &amp; &quot; &quot; &amp; $User.Email &amp; &quot; with the DocuSign Electronic Signature Service&quot; &amp; BR() &amp; BR() &amp; &quot;I am sending you this request for your electronic signature, please review and electronically sign by following the link below. &quot; &amp; BR() &amp; BR() &amp; BR() &amp; &quot;Thank You,  &quot;  &amp; BR() &amp; BR() &amp; $User.FirstName &amp; &quot; &quot; &amp;  $User.LastName &amp; &quot; &quot; &amp; $User.Email</defaultValue>
    <description>DocuSign Email Message</description>
    <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
    <label>DocuSign Email Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>