force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocuSign_Envelope_Sent__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Envelope_Sent__c</fullName>
    <description>DocuSign Envelope Sent</description>
    <inlineHelpText>DocuSign Envelope Sent</inlineHelpText>
    <label>DocuSign Envelope Sent</label>
    <type>DateTime</type>
</CustomField>