force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dsfs__EnvelopeConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The configuration used to generate this envelope.</inlineHelpText>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>DocuSign Envelopes</relationshipLabel>
    <relationshipName>DocuSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>