force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Expire_Void_Envelope__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Expire_Void_Envelope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At times, you may need to encourage your recipients to complete an envelope more rapidly. . After an envelope expires, DocuSign Professional voids the envelope and sends a notification to both sender and recipient.</description>
    <inlineHelpText>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign eSignature for Salesforce voids the envelope and sends a notification to both sender and recipient.</inlineHelpText>
    <label>Expire/Void Envelope</label>
    <type>Checkbox</type>
</CustomField>