force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__I_agree_to_Terms__c.field-meta.xml
<CustomField>
    <fullName>dsfs__I_agree_to_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I agree to Terms</description>
    <inlineHelpText>I agree to Terms</inlineHelpText>
    <label>I agree to Terms</label>
    <type>Checkbox</type>
</CustomField>