force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__I_will_Sign__c.field-meta.xml
<CustomField>
    <fullName>dsfs__I_will_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I will also Sign</description>
    <inlineHelpText>Click this checkbox if you would like to be added as an additional Recipient/Signer on this document.  If you leave this unchecked you will receive notification that the Contact has DocuSigned but will not be able to Sign it yourself.</inlineHelpText>
    <label>I will also Sign</label>
    <type>Checkbox</type>
</CustomField>